2004-10-24  Michael Gogins <gogins@pipeline.com>

	* Updated build system for gcc 3.4.2 (candidate), changed some
	flags to avoid DLL relocation errors on Windows that caused
	problems with restarting CsoundVST, and with debugging.

	* First draft of complete Csound 5 manual with Kevin Conder
	documentation included.  There are as yet many errors with tables
	and graphics, but all (or almost all) of the text appears to be
	good.

2004-10-21  John ffitch  <jpff@codemist.co.uk>

	* OOps/ugens6.c (delset, delrset): Round not truncate
	(deltap): Round not truncate

2004-10-20  John ffitch  <jpff@codemist.co.uk>

	* OOps/ugens6.c (delrset): NULL list of delays for safety, 

2004-09-12  Michael Gogins <gogins@pipeline.com>

	* Added csound::Score::getCsoundScore method in CsoundVST for
	easier use of algorithmic composition classes in other
	Csound-based systems.

	* Updated csound.pdf with API documentation.

	* Restored real-time audio code to more functional version.

2004-10-16  John ffitch  <jpff@codemist.co.uk>

	* Opcodes/sfont.c (Sfplist, filter_string): Removed static array
	to local in caller

2004-10-07 	Steven Yi	<stevenyi@csounds.com>

	* Top/dl_opcodes.c (csoundOpenLibrary): Fixed to work with cygwin

	* Top/thread.s : Fixed to work with cygwin

2004-09-17  John ffitch  <jpff@codemist.co.uk>

	* util2/exports/pv_export.c (main): Free malloced space

2004-09-12  Michael Gogins <gogins@pipeline.com>

	* Restored PortAudio to ASIO only, re-ordered 'notify' and 'wait' for
	better logic and performance.

	* Improved PortAudio stop/restart by returning PaAbort from callbacks.

	* Moved Windows DLLs to csound5 root directory.

	* Added SIGINT to Windows signals handled.

	* Improved order of directives and comments in custom.py.

	* Updated csound.pdf to reflect the above.

2004-09-11  Steven Yi  <stevenyi@csounds.com>

	* SConstruct: Changed to use prefix directory from command line 
	argument, defaults to /usr/local
